# cpp-programming-language

./: CMakeLists.txt  compile.sh  main.cpp  problems.md  run.sh
frontend/: error.cpp  expressions.cpp  lexer.cpp  parser.cpp  statements.cpp  token.cpp
include/: ast.h  error.h  interpreter.h  lexer.h  parser.h
runtime/: evaluator.cpp  interpreter.cpp  util.cpp
test/: array_loop.zr  arrays.zr  escape_sequences.zr  factorial.zr  fn_with_if.zr  functions.zr  simple_fn.zr  syntax.zr  test.zr
